# snail

./: Cargo.toml  Makefile  Makefile.toml  README.md
.cargo/: config.toml
arch/common/src/: addr.rs  lib.rs
arch/riscv/: Cargo.toml
arch/riscv/src/: lib.rs  sbi.rs  timer.rs  vm.rs
arch/riscv64/: Cargo.toml
arch/riscv64/src/: consts.rs  cpu.rs  entry.rs  interrupt.rs  lib.rs  sbi.rs  timer.rs  trap.rs
arch/x86-64/: Cargo.toml
arch/x86-64/src/: cpu.rs  gdt.rs  idt.rs  interrupt.rs  lib.rs  vm.rs
assets/: logo.txt
boot/: build.rs
boot/riscv64/: Cargo.toml  README.md
boot/riscv64/rustsbi-qemu/: Cargo.toml  build.rs
boot/riscv64/rustsbi-qemu/src/: count_harts.rs  execute.rs  feature.rs  linker.ld  prv_mem.rs  qemu_hsm.rs  test_device.rs
boot/riscv64/src/: clint.rs  hart_csr_utils.rs  main.rs  ns16550a.rs  qemu_hsm.rs  runtime.rs
boot/src/: count_harts.rs  prv_mem.rs
boot/src/feature/: emulate_rdtime.rs
drivers/: Cargo.toml  README.md
drivers/core/src/: display.rs  irq.rs  lib.rs
drivers/src/: lib.rs  mouse.rs
drivers/vga/: Cargo.toml
drivers/vga/src/: lib.rs
drivers/virtio/: Cargo.toml
drivers/virtio-blk/: Cargo.toml
drivers/virtio-gpu/: Cargo.toml
drivers/virtio-gpu/src/: cmd.rs  ctrl_hdr.rs  format.rs  inner.rs  lib.rs  req.rs  virtio_gpu.rs
drivers/virtio-input/: Cargo.toml
drivers/virtio-net/: Cargo.toml
drivers/virtio-ring/: Cargo.toml
drivers/virtio-ring/src/: avail.rs  desc.rs  lib.rs  packed.rs  queue.rs  used.rs
drivers/virtio/src/: input.rs  lib.rs  mmio.rs
firmware/: rustsbi-riscv64gc  rustsbi-riscv64imac
firmware/rustsbi/: README.md
firmware/rustsbi/rustsbi-qemu/: Cargo.toml
firmware/rustsbi/rustsbi-qemu/src/: clint.rs  executer.rs  hart_count.rs  hsm.rs  main.rs  mem.rs  ns16550a.rs  runtime.rs  sifive.rs
firmware/rustsbi/rustsbi-qemu/src/feature/: emulate_rdtime.rs  transfer_trap.rs
fs/: Cargo.toml
fs/core/: Cargo.toml
fs/core/src/: dirty.rs  lib.rs
fs/fs_/: Cargo.toml
fs/fs_/src/: block_dev.rs  vfs.rs
fs/src/: bitmap.rs  block_dev.rs  cache.rs  layout.rs  lib.rs  sfs.rs  vfs.rs
kernel/: Cargo.toml  Makefile  build.rs
kernel/src/: config.rs  entry.s  errno.rs  lang.rs  lib.rs  linker.ld  logging.rs  logo.txt  main.rs  memory.rs  sbi.rs  shell.rs  signal.rs  timer.rs  trap.rs  trap.s  vga.rs
kernel/src/arch/riscv/: entry.rs  linker.ld
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  virtio_blk.rs
kernel/src/fs/: fcntl.rs  fd.rs  inode.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/mm/: addr.rs  frame.rs  heap.rs  map.rs  memset.rs  mod.rs  page.rs
kernel/src/platform/riscv64/: linker.ld
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: context.rs  ctrl.rs  mod.rs  pid.rs  process.rs  processor.rs  res.rs  switch.S  switch.rs  task.rs  thread.rs
kernel/src/task_/: context.rs  ctrl.rs  mod.rs  pid.rs  processor.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.s
kernel/tests/: should_panic.rs
platform/: Cargo.toml
platform/src/: arch.rs  boot.rs  cpu.rs  interrupt.rs  lib.rs  mem.rs  timer.rs
platform/src/riscv/: boot_pt.rs  consts.rs  cpu.rs  interrupt.rs  mod.rs  timer.rs
platform/src/x86/: boot.rs  cpu.rs  interrupt.rs  mod.rs
tools/: Cargo.toml
tools/src/: fs.rs  main.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
userland/gui/: Cargo.toml  build.rs  run.sh
userland/gui/examples/: hello.rs
userland/stdlite/: Cargo.toml
userland/stdlite/.cargo/: config.toml
userland/stdlite/src/: io.rs  lib.rs  process.rs  sys.rs  syscall.rs
