[package]
name = "snail"
version = "0.1.0"
authors = ["PinYu1618 <pinyuchen658503@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "snail"

[[test]]
name = "should_panic"
harness = false

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
log = "0.4"
xmas-elf = "0.8.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
snail-fs = { path = "../fs" }
