[package]
name = "snail"
version = "0.1.0"
authors = ["PinYu1618 <pinyuchen658503@gmail.com>"]
edition = "2021"
build = "build.rs"

[features]
default = []
preempt = []
smp = []
up = []

[lib]
name = "snail"

[[test]]
name = "should_panic"
harness = false

[dependencies]
cfg-if = "1.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
riscv = "0.8.0"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
log = "0.4"
xmas-elf = "0.8.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
fs = { path = "../fs/core" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
arch-hal = { package = "riscv", path = "../arch/riscv" }
