[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
spin = "0.9"
trapframe = "0.9.0"

[features]
default = []

# x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
rboot = { git = "https://github.com/rcore-os/rboot.git", rev = "39d6e24", default-features = false }
raw-cpuid = "9.0"
uefi = "0.11"
x86_64 = "0.14"

# risc-V
[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
r0 = "1"
riscv_crate = { package = "riscv", version = "0.8" }
