[package]
name = "snail-user"
version = "0.1.0"
edition = "2021"
authors = ["Pin-Yu Chen <pycc1618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bitflags = "1.2.1"
buddy_system_allocator = "0.6"