[package]
name = "boot-riscv64"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
build = "build.rs"

[dependencies]
rustsbi = "0.2.1"
buddy_system_allocator = "0.8"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.9"
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "dc0bc37e", features = ["inline-asm"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
embedded-hal = "0.2.6"
nb = "1"
bitflags = "1"
bit_field = "0.10"
hashbrown = "0.11"
