[package]
name = "rustsbi-qemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
device_tree = "1.1.0"
embedded-hal = "0.2.7"
hashbrown = "0.12"
lazy_static = "1.4.0"
nb = "1"
riscv = "0.8.0"
rustsbi = "0.2.2"
spin = "0.9.3"
